fixed spacings

--- a/static/style/default/default.css
+++ b/static/style/default/default.css
@@ -29,6 +29,7 @@ div#header a    {
 div#iconband  {
     width: 800px;
     margin-top: 1em;
+    margin-bottom: 1.5em;
     text-align: center;
 }
 div#iconband img {
@@ -66,7 +67,7 @@ div#navigation {
     text-align: left;
     border-style: solid;
     border-width: thin;
-    margin-top: 2em;
+    /*margin-top: 2em;*/
     padding: 0.3em;
     width: 200px;
     position: fixed;
@@ -76,7 +77,7 @@ div#navigation {
 div#content    {
     width: 800px;
     text-align: center;
-    margin-top: 2em;
+    /*margin-top: 2em;*/
 }
 div#content table   {
     margin-left: auto;
